tests/ui/return_type_v2.stderr
error[E0277]: the trait bound `ActorCell<(), u32>: actum::actor::Actor<u64, String>` is not satisfied
  --> tests/ui/return_type_v2.rs:15:23
   |
15 |     let _root = actum(root_v2);
   |                       ^^^^^^^ the trait `actum::actor::Actor<u64, String>` is not implemented for `ActorCell<(), u32>`
   |
   = help: the following other types implement trait `actum::actor::Actor<M, Ret>`:
             ActorCell<(), Ret>
             ActorCell<TestExtension<Ret>, Ret>
note: required by a bound in `root_v2`
  --> tests/ui/return_type_v2.rs:5:8
   |
3  | async fn root_v2<A, R>(cell: A, mut receiver: R, _me: ActorRef<u64>) -> (A, u32)
   |          ------- required by a bound in this function
4  | where
5  |     A: Actor<u64, String>,
   |        ^^^^^^^^^^^^^^^^^^ required by this bound in `root_v2`

error[E0277]: the trait bound `ActorCell<(), u32>: actum::actor::Actor<u64, String>` is not satisfied
  --> tests/ui/return_type_v2.rs:15:17
   |
15 |     let _root = actum(root_v2);
   |                 ^^^^^ the trait `actum::actor::Actor<u64, String>` is not implemented for `ActorCell<(), u32>`
   |
   = help: the following other types implement trait `actum::actor::Actor<M, Ret>`:
             ActorCell<(), Ret>
             ActorCell<TestExtension<Ret>, Ret>
note: required by a bound in `root_v2`
  --> tests/ui/return_type_v2.rs:5:8
   |
3  | async fn root_v2<A, R>(cell: A, mut receiver: R, _me: ActorRef<u64>) -> (A, u32)
   |          ------- required by a bound in this function
4  | where
5  |     A: Actor<u64, String>,
   |        ^^^^^^^^^^^^^^^^^^ required by this bound in `root_v2`

error[E0277]: the trait bound `ActorCell<(), u32>: actum::actor::Actor<u64, String>` is not satisfied
  --> tests/ui/return_type_v2.rs:15:17
   |
15 |     let _root = actum(root_v2);
   |                 ^^^^^^^^^^^^^^ the trait `actum::actor::Actor<u64, String>` is not implemented for `ActorCell<(), u32>`
   |
   = help: the following other types implement trait `actum::actor::Actor<M, Ret>`:
             ActorCell<(), Ret>
             ActorCell<TestExtension<Ret>, Ret>
note: required by a bound in `root_v2`
  --> tests/ui/return_type_v2.rs:5:8
   |
3  | async fn root_v2<A, R>(cell: A, mut receiver: R, _me: ActorRef<u64>) -> (A, u32)
   |          ------- required by a bound in this function
4  | where
5  |     A: Actor<u64, String>,
   |        ^^^^^^^^^^^^^^^^^^ required by this bound in `root_v2`
